<resources>
    <string name="app_name">VargancysPlayer</string>
    <string name="splash_title">正在启动中</string>
    <string name="layout_empty">没有数据！</string>
    <string name="video_title">10_1.mp4</string>
    <string name="video_time">10:20</string>
    <string name="video_size">51M</string>
    <string name="music_title">100_1.mp3</string>
    <string name="music_time">10:21</string>
    <string name="music_size">55M</string>
    <string name="tv_author">德哈卡</string>
    <string name="tv_title">125sadad.mp3</string>
    <string name="tv_time">00:00/10:23</string>
    <string name="buffer_title">缓存中.....</string>
    <string name="loading_title">加载中...</string>
    <string name="search_text">搜索</string>
    <string name="no_data">抱歉! 没有搜到你要的内容....</string>
</resources>
