<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_relative"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_size_120dp">
    <ImageView
        android:id="@+id/video_img"
        android:layout_width="@dimen/margin_size_120dp"
        android:layout_height="@dimen/margin_size_100dp"
        android:layout_marginTop="@dimen/margin_size_10dp"
        android:layout_marginStart="@dimen/margin_size_10dp"
        android:src="@drawable/icon_video"/>

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/video_img"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_size_10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"/>
        <TextView
            android:id="@+id/video_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_time"
            android:textColor="@color/black_1"
            android:textSize="@dimen/text_size_18sp"
            android:layout_marginTop="@dimen/margin_size_20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/video_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_size"
        android:textColor="@color/black_1"
        android:textSize="@dimen/text_size_18sp"
        android:layout_margin="@dimen/margin_size_10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_1dp"
        android:background="@color/black_1"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_size_10dp"/>
</RelativeLayout>