<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_size_50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_splash"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_author"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_size_40dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title"
            android:textColor="@color/white_1"
            android:textSize="@dimen/text_size_14sp"
            android:layout_marginTop="@dimen/margin_size_60dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_time"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/white"
            android:layout_gravity="end"/>
        <SeekBar
            android:id="@+id/seek_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="0"
            android:thumb="@drawable/progress_thumb"
            android:minHeight="@dimen/margin_size_5dp"
            android:maxHeight="@dimen/margin_size_5dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/black"
            android:padding="@dimen/margin_size_10dp">
            <Button
                android:id="@+id/btn_playmode"
                android:layout_width="@dimen/margin_size_30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_playmode_normal_selector" />
            <Button
                android:id="@+id/btn_music_pre"
                android:layout_width="@dimen/margin_size_50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_music_pre_selector"/>
            <Button
                android:id="@+id/btn_music_start_pause"
                android:layout_width="@dimen/margin_size_50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_music_pause_selector"/>
            <Button
                android:id="@+id/btn_music_next"
                android:layout_width="@dimen/margin_size_50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_music_next_selector"/>
            <Button
                android:id="@+id/btn_music_word"
                android:layout_width="@dimen/margin_size_30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_music_word_selector"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>